fix layout problem
git-svn-id: https://svn.midgard-project.org/midgard/trunk/midcom@15799 62f49d1c-1c16-0410-9156-d311ce72abac

--- a/midgard.admin.asgard/static/screen.css
+++ b/midgard.admin.asgard/static/screen.css
@@ -23,6 +23,11 @@ textarea
   width: 100%;
 }
 
+p
+{
+  margin-bottom: 10px
+}
+
 #container-wrapper
 {
   position: relative;
